themes/startwords/assets/scss/_header.scss
/* header styles */

body > header {
    flex: none;
    position: fixed;
    z-index: 2;

    nav {
        position: absolute;
        top: 0;

        ol,
        ul {
            margin: 0;
            padding: 0;
            list-style: none;
            text-align: right;
        }

        li {
            display: inline-block;
        }
    }

    nav[aria-label="main"] {
        left: 0;
        transition: left 0.4s ease;

        ul {
            position: relative;
        }
        li {
            position: absolute;
            width: rem(34px);
            // transform: rotate(180deg);
            cursor: pointer;
        }

        a {
            position: relative;
            text-decoration: none;
            display: block;
            width: 100%;
            height: 100%;
            transition: border 0.2s linear  width 0.2s ease;
            border-width: 0;
            border-color: white;
            border-style: solid;

            span,
            img {
                position: absolute;
            }
        }

        .home {
            background: $red;
            position: absolute;
            height: rem(100px);
            top: 0;
            left: 0;
            z-index: 2; /* above the issues link */
            -webkit-clip-path: polygon(0px 0px, 0px 100%, 100% 19.2px, 23.6px 0px, 0px 0px);
            clip-path: polygon(0px 0px, 0px 100%, 100% 19.2px, 23.6px 0px, 0px 0px);

            img {
                top: rem(5px);
                left: rem(6px);
            }

            a:focus {
                border-left-width: 4px;
            }
        }

        .issues {
            position: absolute;
            font-size: rem(22px);
            top: rem(18px);
            left: 0;
            width: rem(33px);
            a {
                background: $dark-purple;
                height: auto;
                text-direction: sideways;
                writing-mode: vertical-lr;
                transform: rotate(180deg);
                padding-bottom: rem(70px); /* above / to the right of the text */
                padding-top: rem(15px);
                clip-path: polygon(100% 100%, 0.2px 100%, 0px 0px, calc(100% - 8.4px) 0px, 100% 18.5px, 100% 100%);

                color: $off-white;
                &:focus {
                    border-right-width: 4px;
                    width: rem(29px);
                }


            }
        }
    }
}

/* current not in use */
/*
nav[aria-label="breadcrumbs"] {
    transform: rotate(180deg);
    writing-mode: vertical-lr;
    text-orientation: mixed;
    right: -100vw;
}
*/

